// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`returns template with default values 1`] = `
{
  "urlset": {
    "@xmlns": "http://www.sitemaps.org/schemas/sitemap/0.9",
    "@xmlns:image": "http://www.google.com/schemas/sitemap-image/1.1",
    "url": [
      {
        "changefreq": "always",
        "lastmod": "2020-04-07T15:02:08.918Z",
        "loc": "http://demo-prod.origin.arcpublishing.com/food/2020/04/07/tips-for-safe-hand-washing",
        "priority": "0.5",
      },
      {
        "changefreq": "always",
        "lastmod": "2021-04-07T17:02:08.918Z",
        "loc": "http://demo-prod.origin.arcpublishing.com/food/2021/04/07/will-we-ever-stop-hand-washing",
        "priority": "0.5",
      },
      {
        "#": [
          {
            "image:image": {
              "image:loc": "hi/abcdefghijklmnopqrstuvwxyz=/arc-anglerfish-arc2-prod-demo.s3.amazonaws.com/public/VIDEO_ONE_IMAGE.png",
            },
          },
        ],
        "changefreq": "always",
        "lastmod": "2021-04-03T13:02:08.918Z",
        "loc": "http://demo-prod.origin.arcpublishing.com/food/2021/04/03/best-sourdough-recipes",
        "priority": "0.5",
      },
    ],
  },
}
`;

exports[`returns template with empty values 1`] = `
{
  "urlset": {
    "@xmlns": "http://www.sitemaps.org/schemas/sitemap/0.9",
    "@xmlns:image": "http://www.google.com/schemas/sitemap-image/1.1",
    "url": [
      {
        "changefreq": "",
        "lastmod": undefined,
        "loc": "http://demo-prod.origin.arcpublishing.com/food/2020/04/07/tips-for-safe-hand-washing",
        "priority": "",
      },
      {
        "changefreq": "",
        "lastmod": undefined,
        "loc": "http://demo-prod.origin.arcpublishing.com/food/2021/04/07/will-we-ever-stop-hand-washing",
        "priority": "",
      },
      {
        "changefreq": "",
        "lastmod": undefined,
        "loc": "http://demo-prod.origin.arcpublishing.com/food/2021/04/03/best-sourdough-recipes",
        "priority": "",
      },
    ],
  },
}
`;
